--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://atrivedi8988.github.io",
+  "homepage": "https://Supriyakaa.github.io",
   "name": "react-deploy",
   "version": "0.1.0",
   "private": true,
